--- a/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
@@ -43,7 +43,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -57,7 +57,7 @@
                     <!--MATRICULA OPCOES-->
                     <div class="dropdown-container">
                         <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                        <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                        <a class="active" href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
                     </div>
                 </div>
                 <!--REGISTRO-->
