--- a/Projeto_Final/HTMLCSS/Provas/listar_notas_aluno.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/listar_notas_aluno.cshtml
@@ -47,7 +47,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -108,7 +108,7 @@
                 </div>
                 <!--NOTAS-->
                 <div id="sidenav-notas" style="display:none;">
-                    <a href="~/HTMLCSS/Provas/listar_notas_aluno.cshtml">
+                    <a  class="active" href="~/HTMLCSS/Provas/listar_notas_aluno.cshtml">
                         <span class="material-symbols-outlined">scoreboard</span>
                         Suas Notas
                     </a>
