--- a/Projeto_Final/HTMLCSS/Provas/registrar_notas.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/registrar_notas.cshtml
@@ -44,7 +44,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -99,7 +99,7 @@
                     </button>
                     <!--PESQUISA OPCOES-->
                     <div class="dropdown-container">
-                        <a href="~/HTMLCSS/Provas/registrar_notas.cshtml">Dar Nota</a>
+                        <a class="active" href="~/HTMLCSS/Provas/registrar_notas.cshtml">Dar Nota</a>
                         <a href="~/HTMLCSS/Provas/listar_notas_prof.cshtml">Ver Notas</a>
                     </div>
                 </div>
