--- a/Projeto_Final/HTMLCSS/Registro/registro_sala_setor.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro_sala_setor.cshtml
@@ -41,7 +41,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -59,17 +59,18 @@
                     </div>
                 </div>
                 <!--REGISTRO-->
-                <div id="sidenav-registro" style="display:none;">
+                <div id="sidenav-registro" style="display:none;" >
                     <button class="dropdown-btn">
                         <span class="material-symbols-outlined">app_registration</span>
                         Registro
                         <span class="material-symbols-outlined">expand_more</span>
+
                     </button>
                     <!--REGISTRO OPCOES-->
                     <div class="dropdown-container">
                         <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                         <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
-                        <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
+                        <a class="active" href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                     </div>
                 </div>
                 <!--LISTAGEM-->
