--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Admins.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Admins.cshtml
@@ -43,7 +43,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -83,7 +83,7 @@
                     </button>
                     <!--LISTAGEM OPCOES-->
                     <div class="dropdown-container">
-                        <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
+                        <a class="active" href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
                         <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                         <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                         <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
