--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos_Turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Alunos_Turma.cshtml
@@ -47,7 +47,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -88,7 +88,7 @@
                     <!--LISTAGEM OPCOES-->
                     <div class="dropdown-container">
                         <a href="~/HTMLTEMP/Checagem/check_listagem.cshtml">Usuarios</a>
-                        <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                        <a class="active" href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                         <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                         <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
                     </div>
@@ -126,7 +126,6 @@
             </div>
 
 
-        </nav>
         </nav>
 
         <div class="content" id="content">
