--- a/Projeto_Final/HTMLCSS/Provas/listar_notas_prof.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/listar_notas_prof.cshtml
@@ -47,7 +47,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -103,7 +103,7 @@
                     <!--PESQUISA OPCOES-->
                     <div class="dropdown-container">
                         <a href="~/HTMLCSS/Provas/registrar_notas.cshtml">Dar Nota</a>
-                        <a href="~/HTMLCSS/Provas/listar_notas_prof.cshtml">Ver Notas</a>
+                        <a  class="active" href="~/HTMLCSS/Provas/listar_notas_prof.cshtml">Ver Notas</a>
                     </div>
                 </div>
                 <!--NOTAS-->
