--- a/Projeto_Final/HTMLCSS/Registro/matricula.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/matricula.cshtml
@@ -41,7 +41,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -54,7 +54,7 @@
                     </button>
                     <!--MATRICULA OPCOES-->
                     <div class="dropdown-container">
-                        <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
+                        <a class="active" href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
                         <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
                     </div>
                 </div>
