--- a/Projeto_Final/HTMLCSS/Registro/registro_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Registro/registro_turma.cshtml
@@ -41,7 +41,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -68,7 +68,7 @@
                     <!--REGISTRO OPCOES-->
                     <div class="dropdown-container">
                         <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
-                        <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
+                        <a class="active" href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                         <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
                     </div>
                 </div>
