--- a/Projeto_Final/HTMLCSS/UserArea/edit_usearea/edit_user.cshtml
+++ b/Projeto_Final/HTMLCSS/UserArea/edit_usearea/edit_user.cshtml
@@ -48,7 +48,7 @@
             <!--SIDEBAR-->
             <div class="sidenav">
                 <!--PAGINA INICIAL-->
-                <a class="active" href="~/HTMLCSS/Main/main.cshtml">
+                <a  href="~/HTMLCSS/Main/main.cshtml">
                     <span class="material-symbols-outlined">home</span>
                     Pagina Inicial
                 </a>
@@ -115,7 +115,7 @@
                     </a>
                 </div>
                 <!--AREA DO USUARIO-->
-                <a href="~/HTMLCSS/UserArea/userarea.cshtml">
+                <a class="active" href="~/HTMLCSS/UserArea/userarea.cshtml">
                     <span class="material-symbols-outlined">account_circle</span>
                     Área do Usuario
                 </a>
