--- a/Projeto_Final/HTMLCSS/CSS/main.css
+++ b/Projeto_Final/HTMLCSS/CSS/main.css
@@ -1,23 +1,88 @@
 ﻿body {
-    margin: 0;
-    min-height: 100%;
-    box-sizing: border-box;
-    background-color: #eeeeee;
+    background-color: rgb(46, 46, 46);
+}
+
+.sidebar {
+    height: 100%;
+    width: 200px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
+    margin-left: 200px; /* Same as the width of the sidenav */
+    font-size: 20px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+}
+
+.logo {
+    display: flex;
+    justify-content: center;
+    filter: drop-shadow(0 0.5rem 0.25rem rgba(0, 0, 0, 0.5));
 }
 
 
+.sidenews-container {
+    background-color: rgb(62, 62, 62);
+    height: 600px;
+    width: 300px;
+    position: relative;
+    padding: 18px;
+}
+
+hr.green-line {
+    border: 5px solid #7ecf6d;
+    border-radius: 5px;
+    width: 150px;
+    float: left;
+}
+
+.sidenews-text a {
+    color: aliceblue;
+    font-family: 'Bebas Neue';
+    text-decoration: none;
+    font-size: 15px;
+}
+
+    .sidenews-text a:hover {
+        color: darkgrey;
+    }
+
+.sidenews-text p {
+    font-family: 'Roboto';
+    font-size: 13px;
+    color: aliceblue;
+    font-weight: lighter;
+}
+
+.textbox {
+    background-color: rgb(62, 62, 62);
+    height: 300px;
+    width: 500px;
+    padding: 10px;
+    font-size: 18px;
+    text-align: justify;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: aliceblue;
+}
+
 img {
-    max-width: 1000px;
+    max-width: 600px;
     max-height: 400px;
 }
 
-
 .slideshow-container {
-    max-width: 1000px;
-    max-height:400px;
+    max-width: 600px;
+    max-height: 400px;
     position: relative;
-    margin: auto;
-
 }
 
 /* Hide the images by default */
@@ -33,24 +98,14 @@ img {
     padding: 30px 0px;
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 600px;
     text-align: center;
 }
 
     .text:hover {
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0,0,0,0.2);
         font-weight: bold;
-        
     }
-
-/* Number text (1/3 etc) */
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
 
 /* The dots/bullets/indicators */
 .dot {
@@ -82,57 +137,4 @@ img {
     to {
         opacity: 1
     }
-}
-
-.sidenews-container {
-    max-width: 550px;
-    max-height: 850px;
-    background-color: #ebebeb;
-    float: right;
-}
-
-.sidenews-text {
-    padding-top: 18px;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-hr.green-line {
-    border: 5px solid #5dff3e;
-    border-radius: 5px;
-    width: 150px;
-    float: left;
-}
-
-.sidenews-text a{
-    color: black;
-    font-family: 'Bebas Neue';
-    text-decoration: none;
-}
-
-.sidenews-text p {
-    font-family: 'Roboto';
-    font-size: 15px;
-    font-weight: lighter;
-}
-
-.texto-container {
-    max-width: 950px;
-    border-radius: 15px;
-    background: rgba(255, 255, 255, 0.4);
-    -webkit-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
-    -moz-box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
-    box-shadow: 13px 17px 15px -1px rgba(0,0,0,0.47);
-    margin-left: 50px;
-    float: left;
-}
-
-.texto-texto {
-    padding-top: 18px;
-    padding-bottom: 18px;
-    padding-left: 10px;
-    padding-right: 10px;
-    text-align: justify;
-    font-size: 20px;
-    font-family: 'Abel';
 }
