--- a/Projeto_Final/HTMLCSS/Main/main.cshtml
+++ b/Projeto_Final/HTMLCSS/Main/main.cshtml
@@ -126,91 +126,41 @@
         </nav>
 
         <main>
-            
             <div class="content" id="content">
                 <div class="logo">
-                    <center>
-                        <img src="~/IMG/cenai.png" /><br />
-                    </center>
+                    <img src="~/IMG/cenai.png">
                 </div>
-                <!-- Slideshow -->
+                <br>
                 <div class="slideshow-container">
-
-                    <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
-                        <div class="numbertext">1 / 4</div>
-                        <a href="#"><img src="~/IMG/slide1.jpg" style="width:100%"></a>
+                        <a href="#"><img src="https://source.unsplash.com/iEiUITs149M"></a>
                         <div class="text">CURSO WEB DESIGN</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">2 / 4</div>
-                        <a href="#"><img src="~/IMG/slide2.jpg" style="width:100%"></a>
+                        <a href="#"><img src="https://source.unsplash.com/bN5XdU-bap4"></a>
                         <div class="text">CURSO DE ARDUINO</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">3 / 4</div>
-                        <a href="#"><img src="~/IMG/slide3.jpeg" style="width:100%"></a>
+                        <a href="#"><img src="https://source.unsplash.com/zP7X_B86xOg"></a>
                         <div class="text">CURSO DE INTERNET DAS COISAS (IOT)</div>
                     </div>
 
                     <div class="mySlides fade">
-                        <div class="numbertext">4 / 4</div>
-                        <a href="#"><img src="~/IMG/slide4.jpg" style="width:100%"></a>
+                        <a href="#"><img src="https://source.unsplash.com/XJXWbfSo2f0"></a>
                         <div class="text">CURSO DE PROGRAMAÇÃO ORIENTADA A OBJETOS (POO)</div>
                     </div>
-                </div>
-                <br />
 
-                <!-- Pontinhos -->
-                <div style="text-align:center">
-                    <span class="dot" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>
-                    <span class="dot" onclick="currentSlide(4)"></span>
-                </div>
-                <br />
-
-
-                <!-- Paragrafos -->
-                <div class="texto-container">
-                    <div class="texto-texto">
-                        <p>
-                            <strong>
-                                Somos curiosos e tecnológicos. Somos Cenai. Desde 1942,
-                                oferecemos educação e serviços que auxiliam no
-                                desenvolvimento da indústria e dos gaúchos.
-                            </strong>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna
-                            aliqua. Urna duis convallis convallis tellus id interdum velit. Quam adipiscing
-                            vitae proin sagittis nisl rhoncus mattis. Praesent semper feugiat nib
-                            h sed pulvinar proin gravida hendrerit lectus. Aliquet risus feugiat
-                            in ante metus. Volutpat odio facilisis mauris sit amet massa vitae.
-                            Risus sed vulputate odio ut enim. Purus sit amet volutpat consequat
-                            mauris nunc congue. Cras sed felis eget velit aliquet sagittis id
-                            consectetur. Eu consequat ac felis donec.
-
-                            Ante metus dictum at tempor commodo ullamcorper a lacus.
-                            Est ullamcorper eget nulla facilisi etiam dignissim diam
-                            quis enim. Egestas tellus rutrum tellus pellentesque eu
-                            tincidunt tortor aliquam. Quis viverra nibh cras pulvina
-                            r mattis. Odio ut sem nulla pharetra. Ornare massa eget
-                            egestas purus viverra accumsan in. A cras semper auctor
-                            neque vitae tempus quam pellentesque. Habitasse platea d
-                            ictumst quisque sagittis purus sit amet. Rhoncus aenean
-                            vel elit scelerisque mauris. Lorem dolor sed viverra i
-                            psum nunc aliquet bibendum enim. Aliquam ut porttitor
-                            leo a diam sollicitudin tempor. Id cursus metus aliquam
-                            eleifend. Elementum sagittis vitae et leo duis. At tellus
-                            at urna condimentum mattis pellentesque id. Enim nec dui
-                            nunc mattis enim. Penatibus et magnis dis parturient montes
-                            nascetur. Iaculis nunc sed augue lacus viverra vitae. Malesuada
-                            fames ac turpis egestas sed tempus urna et pharetra. At auctor
-                            urna nunc id cursus metus aliquam eleifend mi.
-                        </p>
+                    <br />
+                    <!-- Pontinhos -->
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                        <span class="dot" onclick="currentSlide(3)"></span>
+                        <span class="dot" onclick="currentSlide(4)"></span>
                     </div>
+                    <br />
                 </div>
 
                 <div class="sidenews-container">
@@ -253,8 +203,18 @@
                         <hr />
 
                     </div>
+
                 </div>
 
+                <div class="textbox">
+                    <strong>
+                        Somos curiosos e tecnológicos. Somos Cenai. Desde 1942,
+                        oferecemos educação e serviços que auxiliam no
+                        desenvolvimento da indústria e dos gaúchos.
+                    </strong>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique enim minus error quasi quidem consequatur quos aspernatur laborum inventore, eum asperiores deleniti optio corporis vero, voluptatum quaerat eveniet. In, tenetur.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, molestias nemo! Explicabo ipsum eius possimus repellat, accusantium architecto dolorem sunt omnis, quo molestiae praesentium, deleniti saepe voluptates consequuntur quod ipsa!
+                </div>
             </div>
         </main>
     </section>
