--- a/Projeto_Final/Index.cshtml
+++ b/Projeto_Final/Index.cshtml
@@ -14,7 +14,7 @@
                 <center>
                     <img src="~/IMG/cenai.png" /><br />
                     <tagline>Bem-vindo!</tagline><br />
-                    <input type="text" id="cpfid" name="cpfid" class="campo_cpf" placeholder="CPF apenas numeros" maxlength="11" required />
+                    <input type="text" id="cpfid" name="cpfid" class="campo_cpf" placeholder="CPF" maxlength="11" required />
                     <br />
                     <input type="password" id="senhaid" name="senhaid" class="campo_senha" placeholder="senha" minlength="6" maxlength="16" required />
                     <br />
