--- a/Projeto_Final/HTMLCSS/Main/main.cshtml
+++ b/Projeto_Final/HTMLCSS/Main/main.cshtml
@@ -35,6 +35,8 @@
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
     <link rel="stylesheet" href="~/HTMLCSS/CSS/main.css" />
 
+    <noscript>JavaScript é necessário para acessar o site</noscript>
+
     <title>CENAI</title>
 </head>
 <body div class="bg" onload="poof()">
