--- a/Projeto_Final/HTMLCSS/CSS/Listagem.css
+++ b/Projeto_Final/HTMLCSS/CSS/Listagem.css
@@ -16,13 +16,19 @@
     display: inline-flex;
 }
 
-    .options button {
+    .options button{
         border-radius: 10px;
         border: none;
         background: rgba(255, 255, 255, 0.13);
     }
 
-    .options button:hover {
+.dwnld_btn {
+    border-radius: 10px;
+    border: none;
+    background: rgba(255, 255, 255, 0.13);
+}
+
+    .options button:hover, .dwnld_btn:hover {
         color: #f1f1f1;
     }
 
